PWA: new icons and correct link manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "TEAM STATUS",
+  "name": "STATUS",
   "short_name": "STATUS",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
